src/modules/PhonesPage/PhonesPage.module.scss
@import '../../modules/shared/variables';
@import '../shared/fonts';
@import '../shared/mixins';

@keyframes scale-in {
  0% {
    opacity: 0;
    transform: scale(0.9);
  }
  50% {
    opacity: 0.3;
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}

.phonesPageContainer {
  align-self: center;
  min-height: 100vh;
}

.phonesPage {
  align-self: center;
  display: grid;
  column-gap: 16px;
  grid-template-columns: repeat($grid-columns, 32px);
}

.reloadContainer {
  grid-column: 1 / -1;
  display: flex;
  flex-direction: column;
  justify-content: start;
  height: 100vh;
}

.errorMsg {
  display: block;
  padding-right: 25px;
  font-family: Mont, sans-serif, Helvetica;
  font-size: 21px;
  letter-spacing: -0.01em;
  line-height: 50px;
  align-self: center;
  color: red;
}

.reloadBtn {
  display: flex;
  font-family: Mont, sans-serif, Helvetica;
  font-size: 14px;
  width: 60px;
  height: 25px;
  align-self: center;
  justify-items: center;
  justify-content: center;
}

.path {
  grid-column: 1 / -1;
  display: flex;
  padding-top: 24px;
  justify-content: start;
  height: 16px;
}

.pathHome {
  width: 16px;
  height: 16px;
  background-image: url(../../../public/img/icons/home.svg);
}

.homeLink {
  width: 16px;
  height: 16px;
}

.pathSeparator {
  width: 16px;
  height: 16px;
  background-image: url(../../../public/img/icons/chevron-arrow-right-default.svg);
  margin-left: 8px;
}

.pathName {
  display: block;
  font-family: Mont, sans-serif, Helvetica;
  font-size: 12px;
  font-weight: 600;
  line-height: 16px;
  text-align: left;
  color: $secondary-color;
  height: 16px;
  margin-left: 8px;
  text-decoration: none;
  cursor: default;
}

.title {
  grid-column: 1 / -1;
  padding-top: 40px;
  font-family: Mont, sans-serif, Helvetica;
  font-size: 48px;
  font-weight: 700;
  line-height: 56px;
  letter-spacing: -0.01em;
  text-align: left;
  color: $primary-color;
}

.counter {
  grid-column: 1 / -1;
  padding-top: 8px;
  font-family: Mont, sans-serif, Helvetica;
  font-size: 14px;
  font-weight: 600;
  line-height: 21px;
  text-align: left;
  color: $secondary-color;
}

.dropDowns {
  grid-column: 1 / -1;
  display: grid;
  column-gap: 16px;
  grid-template-columns: repeat($grid-columns, 32px);
  height: 59px;
  padding-top: 40px;
}

.dropDownContainerSortBy {
  grid-column: 1 / 5;
  height: 59px;
}

.dropDownContainerOnPage {
  grid-column: 5 / 8;
  height: 59px;
}

.dropDownTitle {
  font-family: Mont, sans-serif, Helvetica;
  font-size: 12px;
  font-weight: 600;
  line-height: 15.34px;
  text-align: left;
  color: $secondary-color;
}

[class$='-control'] {
  grid-column: 1 / 5 !important;
  margin-top: 4px !important;
  border-radius: 0 !important;
  border: 1px solid $icons-color !important;
  transition-duration: $transition-duration !important;
  cursor: pointer !important;
  box-shadow: none !important;
  height: 40px !important;

  &:hover {
    border-color: $secondary-color !important;
  }
}

[class$='-singleValue'] {
  font-family: Mont, sans-serif, Helvetica !important;
  font-size: 14px !important;
  font-weight: 600 !important;
  line-height: 21px !important;
  text-align: left !important;
  color: $primary-color !important;
}

[class$='-placeholder'] {
  display: none !important;
}

[class$='-indicatorSeparator'] {
  display: none !important;
}

[class$='-menu'] {
  margin-top: 4px !important;
  border-radius: 0 !important;
  animation: scale-in $transition-duration ease-in-out !important;
}

[class$='-MenuList'] {
  border: 1px solid $elements-color !important;
  box-shadow: 0 2px 15px 0 #0000000d !important;
}

[class$='-option'] {
  font-family: Mont, sans-serif, Helvetica !important;
  font-size: 14px !important;
  font-weight: 500 !important;
  line-height: 21px !important;
  text-align: left !important;
  color: $secondary-color !important;
  background-color: transparent !important;

  &:hover {
    color: $primary-color !important;
    cursor: pointer !important;
  }
}

svg {
  display: none !important;
}

[class$='-indicatorContainer'] {
  margin-right: 12px;
  background-image: url(../../../public/img/icons/chevron-arrow-down.svg);
}

.loaderContainer {
  grid-column: 1 / -1;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 80vh;
}

.loaderSpinner {
  width: 100px;
  height: 100px;
}

.noProductsMessage {
  grid-column: 1 / -1;
  font-family: Mont, sans-serif, Helvetica;
  font-size: 21px;
  font-weight: 500;
  line-height: 21px;
  text-align: center;
  color: $secondary-color;
  height: 80vh;
  padding-top: 40px;
}

@include on-tablet {
  .phonesPage {
    grid-template-columns: repeat($grid-columns-tablet, 32px);
  }
}

@include on-mobile {
  .phonesPage {
    grid-template-columns: repeat($grid-columns-mobile, 60px);
  }

  .title {
    padding-top: 40px;
    font-size: 32px;
    font-weight: 700;
    line-height: 41px;
    letter-spacing: -0.01em;
    text-align: left;
  }

  .dropDowns {
    grid-column: 1 / -1;
    display: grid;
    column-gap: 16px;
    grid-template-columns: repeat($grid-columns-mobile, 60px);
    height: 59px;
    padding-top: 40px;
  }

  .dropDownContainerSortBy {
    grid-column: 1 / 3;
    height: 59px;
  }

  .dropDownContainerOnPage {
    grid-column: 3 / -1;
    height: 59px;
  }
}

